# routes/api.php
@@ -11,6 +11,7 @@ use App\Http\Controllers\Api\CalendarEventController;
 use App\Http\Controllers\Api\TeacherController;
 use App\Http\Controllers\Api\PartnerController;
 use App\Http\Controllers\Api\BannerController;
+use App\Http\Controllers\Api\PageController;
 use App\Http\Controllers\Api\UniversityController;
 use App\Http\Controllers\Api\SocialNetworkController;
 
@@ -35,6 +36,7 @@ Route::get('/calendar-events', [CalendarEventController::class, 'index'])->name(
 Route::get('/teachers', [TeacherController::class, 'index'])->name('api.teachers.index');
 Route::get('/partners', [PartnerController::class, 'index'])->name('api.partners.index');
 Route::get('/banners/{page}', [BannerController::class, 'show'])->name('api.banners.show');
+Route::get('/pages/{page}', [PageController::class, 'show'])->name('api.pages.show');
 Route::get('/universities', [UniversityController::class, 'index'])->name('api.universities.index');
 Route::get('/social-networks', [SocialNetworkController::class, 'index'])->name('api.social-networks.index');
 
